--- a/Code/Lifestyle data.ipynb
+++ b/Code/Lifestyle data.ipynb
@@ -392,7 +392,7 @@
    "source": [
     "\n",
     "\n",
-    "After the initial consideration contains authors that had posted five times or more in the respective political subreddits, they are now reduced to authors that had posted ten times or more."
+    "After the initial consideration contained authors that had posted five times or more in the respective political subreddits, they are now reduced to authors that had posted ten times or more."
    ]
   },
   {
