--- a/Code/Preparatory code.ipynb
+++ b/Code/Preparatory code.ipynb
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A quick inspection if everything worked:"
+    "Inspection if everything worked."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Necessary corrections within the strings, as \"\\r\" is carriage return"
+    "Necessary corrections within the strings, as \"\\r\" is carriage return."
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Converting from UNIX time and adjusting the timezone"
+    "Converting from UNIX time and adjusting the timezone."
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Breaking it all down to year specific dfs"
+    "Breaking it all down to year specific dataframes."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking for missing days:"
+    "Checking for missing days."
    ]
   },
   {
@@ -321,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Storing the partisan subreddit data:"
+    "Storing the partisan subreddit data."
    ]
   },
   {
@@ -344,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preparing network files:"
+    "Preparing network files."
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Breaking it down to individual authors and preparing the txt files for the lifestyle networks"
+    "Breaking it down to individual authors and preparing the txt files for the lifestyle networks."
    ]
   },
   {
@@ -454,7 +454,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Storing the txt file that serve as a basis for applying the lifestyle posting extracting script"
+    "Storing the txt file that serve as a basis for applying the lifestyle posting extracting script."
    ]
   },
   {
